crates/rpc-cli/tests/snapshots/solid__snapshot_solid_mutations_only.snap
---
source: crates/rpc-cli/tests/solid.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

import { createSignal, createEffect, createMemo, onCleanup, batch, untrack } from "solid-js";

import { type RpcClient, RpcError, type CallOptions } from "./rpc-client";

import type { Procedures } from "./rpc-types";

export { RpcError };
export type { RpcClient, CallOptions, Procedures };

type MutationKey = keyof Procedures["mutations"];
type MutationInput<K extends MutationKey> = Procedures["mutations"][K]["input"];
type MutationOutput<K extends MutationKey> = Procedures["mutations"][K]["output"];

type VoidMutationKey = "reset";
type NonVoidMutationKey = "create_item";
type MutationArgs<K extends MutationKey> = K extends VoidMutationKey ? [] : [input: MutationInput<K>];

export interface MutationOptions<K extends MutationKey> {
  /** Per-call options forwarded to client.mutate(). */
  callOptions?: CallOptions;

  /** Called when the mutation succeeds. */
  onSuccess?: (data: MutationOutput<K>) => void;

  /** Called when the mutation fails. */
  onError?: (error: RpcError) => void;

  /** Called when the mutation settles (success or failure). */
  onSettled?: () => void;
}

export interface MutationResult<K extends MutationKey> {
  /** Execute the mutation. Rejects on error. */
  mutate: (...args: MutationArgs<K>) => Promise<void>;

  /** Execute the mutation and return the result. Rejects on error. */
  mutateAsync: (...args: MutationArgs<K>) => Promise<MutationOutput<K>>;

  /** The latest successfully resolved data. */
  data: () => MutationOutput<K> | undefined;

  /** The error from the most recent failed mutation, cleared on next attempt. */
  error: () => RpcError | undefined;

  /** True while a mutation is in-flight. */
  isLoading: () => boolean;

  /** True after the most recent mutation succeeded. */
  isSuccess: () => boolean;

  /** True when the most recent mutation failed. */
  isError: () => boolean;

  /** Reset state back to idle (clear data, error, status). */
  reset: () => void;
}

export function createMutation<K extends MutationKey>(
  client: RpcClient,
  key: K,
  options?: MutationOptions<K>,
): MutationResult<K> {
  const [data, setData] = createSignal<MutationOutput<K> | undefined>();
  const [error, setError] = createSignal<RpcError | undefined>();
  const [isLoading, setIsLoading] = createSignal(false);
  const [hasSucceeded, setHasSucceeded] = createSignal(false);

  const isSuccess = createMemo(() => hasSucceeded() && error() === undefined);
  const isError = createMemo(() => error() !== undefined);

  async function execute(...input: MutationArgs<K>): Promise<MutationOutput<K>> {
    setIsLoading(true);
    setError(undefined);
    setHasSucceeded(false);
    try {
      const callArgs: unknown[] = [key];
      if (input.length > 0) callArgs.push(input[0]);
      if (options?.callOptions) callArgs.push(options.callOptions);
      const result = await (client.mutate as (...a: unknown[]) => Promise<unknown>)(
        ...callArgs
      ) as MutationOutput<K>;
      setData(result as Exclude<MutationOutput<K> | undefined, Function>);
      setHasSucceeded(true);
      options?.onSuccess?.(result);
      return result;
    } catch (e) {
      const err = e as RpcError;
      setError(err as Exclude<RpcError | undefined, Function>);
      options?.onError?.(err);
      throw e;
    } finally {
      setIsLoading(false);
      options?.onSettled?.();
    }
  }

  return {
    mutate: async (...args: MutationArgs<K>) => { await execute(...args); },
    mutateAsync: (...args: MutationArgs<K>) => execute(...args),
    data: data as () => MutationOutput<K> | undefined,
    error,
    isLoading,
    isSuccess,
    isError,
    reset: () => batch(() => { setData(undefined); setError(undefined); setIsLoading(false); setHasSucceeded(false); }),
  };
}
